--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "dev": "ts-node --transpile-only ./src/index.ts",
+        "dev": "ts-node-dev --respawn --transpileOnly ./src/index.ts",
         "prisma:save": "prisma migrate save --experimental",
         "prisma:up": "prisma migrate up --experimental",
         "prisma:generate": "prisma generate",
@@ -18,6 +18,7 @@
         "@types/bcryptjs": "^2.4.2",
         "@types/jsonwebtoken": "^8.3.9",
         "@types/node": "^13.13.4",
+        "@types/winston": "^2.4.4",
         "@typescript-eslint/eslint-plugin": "^2.30.0",
         "@typescript-eslint/parser": "^2.30.0",
         "eslint": "^6.8.0",
@@ -25,6 +26,7 @@
         "eslint-plugin-prettier": "^3.1.3",
         "prettier": "^2.0.5",
         "ts-node": "^8.10.1",
+        "ts-node-dev": "^1.0.0-pre.44",
         "typegraphql-prisma": "^0.2.1",
         "typescript": "^3.8.3"
     },
@@ -38,8 +40,13 @@
         "cors": "^2.8.5",
         "express": "^4.17.1",
         "graphql": "^15.0.0",
+        "graphql-middleware": "^4.0.2",
+        "graphql-shield": "^7.2.6",
+        "graphql-tools": "^5.0.0",
+        "inversify": "^5.0.1",
         "jsonwebtoken": "^8.5.1",
         "reflect-metadata": "^0.1.13",
-        "type-graphql": "^1.0.0-rc.1"
+        "type-graphql": "^1.0.0-rc.1",
+        "winston": "^3.2.1"
     }
 }
